docs: update auth and env docs for comment-based JWT flow

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,17 @@
 # Database
 DATABASE_URL=postgresql://user:password@host:5432/dbname
 
-# Bags
+# Bags API
 BAGS_API_KEY=your_bags_public_api_key
-OPERATOR_WALLET_ADDRESS=your_operator_public_wallet_address
-OPERATOR_PRIVATE_KEY_BASE58=your_operator_private_key_base58
+BAGS_API_BASE=https://public-api-v2.bags.fm/api/v1
+
+# Operator wallet (preferred names)
+BAGS_WALLET_ADDRESS=your_operator_public_wallet_address
+BAGS_PRIVATE_KEY=your_operator_private_key_base58
+
+# Backward-compatible wallet aliases (optional)
+# OPERATOR_WALLET=your_operator_public_wallet_address
+# OPERATOR_PRIVATE_KEY=your_operator_private_key_base58
 
 # Solana
 SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
@@ -13,7 +20,23 @@ SOLANA_RPC_URL=https://api.mainnet-beta.solana.com
 PORT=3000
 NODE_ENV=development
 
+# Agent auth (JWT)
+JWT_SECRET=replace_with_long_random_secret
+APP_JWT_TTL_SECONDS=3600
+AUTH_CHALLENGE_TTL_MS=900000
+
+# Moltbook comment verification
+MOLTBOOK_API_BASE=https://www.moltbook.com/api/v1
+MOLTBOOK_VERIFICATION_POST_ID=your_verification_post_id_or_url
+
+# Auth feature flags
+AUTH_ALLOW_LEGACY_HEADER=false
+AUTH_ALLOW_BAGS_VERIFY=false
+
 # Optional security
-# Comma-separated Moltbook usernames allowed to call write endpoints.
-# Leave empty to allow any username header.
+REQUIRE_ALLOWLIST=false
 AGENT_ALLOWLIST=clawbot1,clawbot2
+
+# Optional partner program
+# BAGS_PARTNER_WALLET=your_partner_wallet
+# BAGS_PARTNER_CONFIG=your_partner_config
